--- a/рубеж 2/my site/page3.html
+++ b/рубеж 2/my site/page3.html
@@ -10,9 +10,7 @@
 </font>
 <center>
 <font face="comic sans ms" size=+3 color=darkblue><b> 
-4-х разрядный двоичный счетчик импульсов<br>
-<font face="comic sans ms" size=+2 color=red><b><i>
-Решение задачи 1 находится в файле рубеж1/"asyn-RS-NOR.TSC":<br></i><br>
+Решение задачи 1 находится в файле рубеж2/tina/"Stetchik_.TSC":<br></i><br>
 <IMG SRC="ss1.jpg" WIDTH=70% ALIGN="center"><br><br>
 
 </body>
