--- a/рубеж 2/my site/page1N.html
+++ b/рубеж 2/my site/page1N.html
@@ -1,7 +1,12 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1251">
-
+<style type="text/css">
+<!--
+a {color: darkblue; font-size: 24; font-weight: ; left: 10px}
+a:hover {color: red; font-size: 24; font-weight: ; left: 10px}
+-->
+</style>
 <SCRIPT language="javaScript">
 <!--
 function vv1()
@@ -164,7 +169,8 @@ function vv8()
    <font face="comic sans ms" size=+3 color=darkblue>
      <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
      <li><p align=left>Дана проверенная на "TINA" схема простейшего 4-разрядного суммирующего счетчика и известен принцип работы этого счетчика </li> 
-	 <li><p align=left>Дана схема простейшего дешифратора и известен принцип работы этого устройства </li>
+	 <li><p align=left>Дана схема <a href="javascript: vv2()" > 
+простейшего дешифратора</a> и известен принцип работы этого устройства </li>
 
   
 <hr size=+2 color=red>
@@ -199,7 +205,8 @@ function vv8()
      <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
      <li><p align=left>Дана проверенная на "TINA" схема простейшего 4-разрядного суммирующего счетчика и известен принцип работы этого счетчика </li> 
 	 <li><p align=left>Дана схема простейшего дешифратора и известен принцип работы этого устройства </li>
-	 	 <li><p align=left>Дана схема аналогового мультиплексора и известен принцип работы этого устройства </li>
+	 	 <li><p align=left>Дана схема <a href="javascript: vv3()" > 
+аналогового мультиплексора</a> и известен принцип работы этого устройства </li>
 
   
 <hr size=+2 color=red>
