--- a/рубеж 2/my site/page8.html
+++ b/рубеж 2/my site/page8.html
@@ -7,6 +7,13 @@ a:hover {color: red; font-size: 24; font-weight: ; left: 10px}
 </style>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1251">
+<SCRIPT language="javaScript">
+<!--
+function vv8()
+{window.open('vv8.html','dd','scrollbars=yes,toolbar=no,status=no,width=50,height=100,resizable=1,top=70,left=100');
+}
+//-->
+</SCRIPT>
 <script language="JavaScript">
 
 
@@ -173,19 +180,19 @@ function a7()
 <font face="comic sans ms" size=+3 color=darkblue><b>
 <u>В задаче №2 главное</u><center>
 <font face="comic sans ms" size=+3 color=red><b> 
-Проверить работу 4-х разрядного вычитающего двоичного счетчика на T-триггерах<br><br></font>
-Для решения данной задачи</font><p align=left> 
-<font face="comic sans ms" size=+3 color=blue><b>
+Проверить работу 4-х разрядного вычитающего двоичного счетчика на T-триггерах</font>
 
+<font face="comic sans ms" size=+3 color=blue><b>
+<p align=left> 
 1)Для понимания работы счетчика вспомним 
-<a href="javascript: vv3()"> 
-Работу Т-триггера на микросхеме JK (доп.окно)</a></font><br>
+<a href="javascript: vv8()"> 
+работу Т-триггера на микросхеме JK</a></font><br>
 <font face="comic sans ms" size=+3 color=blue><b>
 2)Заметим, что обратный счетчик отличается от суммирующего тем, что счетный вход каждого последующего триггера соединяется с инверсным, а не прямым выходом предыдущего<br>
 
-<font face="comic sans ms" size=+3 color=darkblue><b>
+
 <center>
-ИТАК для решения задачи №2 будем придерживаться следующего плана:<br>
+
 <font face="comic sans ms" size=+3 color=purple><b>
 Этапы построения: <br>
 <font face="comic sans ms" size=+1 color=blue>
@@ -196,7 +203,7 @@ function a7()
 <script>
 if (linkornot==1)
 document.write('<a href="javascript:transport()">')
-document.write('<img src="'+photos[0]+'" name="photoslider" width=90% style="filter:revealTrans(duration=2,transition=23)" border=0>')
+document.write('<img src="'+photos[0]+'" name="photoslider" width="900" height="500" style="filter:revealTrans(duration=2,transition=23)" border=0>')
 if (linkornot==1)
 document.write('</a>')
 </script>
