--- a/рубеж 2/my site/page1N.html
+++ b/рубеж 2/my site/page1N.html
@@ -84,6 +84,7 @@ function vv8()
 <font face="comic sans ms" size=+4 color=blue><b> 
 <p align=left>
 Задача №1 <br>
+
 <font face="comic sans ms" size=+3 color=darkblue> <br>
 На компьютерной модели "TINA" собрать схему простейшего 4-разрядного суммирующего счетчика на Т-триггерах и представить последовательность действий,
 демонстрирующих работу этого устройства в "TINA", в том числе преобразование двоичного кода на выходе счетчика в 7-ми сегментное изображение его десятичного эквивалента<br>
@@ -146,7 +147,7 @@ function vv8()
 
 <font face="comic sans ms" size=+4 color=red><hr color=red>
 Как это сделать? <br> </font><font face="comic sans ms" size=+3 color=blue>
-<u>Для решения этой задачи</font></u> мы имеем компьютерную модель "TINA", где и будем собирать схему данного счетчика. 
+<u>Для решения этой задачи</u> мы имеем компьютерную модель "TINA", где и будем собирать схему данного счетчика. 
 Подавая тактовые импульсы на вход счетчика, мы будем вычитать из 15 количество поданных импульсов <br><br>
 Задача будет считаться <i><font color=red>решенной верно</i></font>, если выведенное на семисегментном индикаторе число совпадает с полученной разностью.
 <br>
@@ -164,19 +165,17 @@ function vv8()
 <font face="comic sans ms" size=+4 color=red>
 <hr color=red>
 Что дано? <br></font>
-<p align=left>
+
    <ul>
    <font face="comic sans ms" size=+3 color=darkblue>
      <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
      <li><p align=left>Дана проверенная на "TINA" схема простейшего 4-разрядного суммирующего счетчика и известен принцип работы этого счетчика </li> 
 	 <li><p align=left>Дана схема <a href="javascript: vv2()" > 
 простейшего дешифратора</a> и известен принцип работы этого устройства </li>
-
-  
 <hr size=+2 color=red>
 
 <font face="comic sans ms" size=+4 color=red>
-Что надо найти? <br></font>Надо показать:<ul><li><p align=left> как включить одну из трех ламп в зависимости от кода, сформированного на счетчике "TINA" </ul></li>
+Что надо найти? <br></font>Надо показать:<ul><li>как включить одну из трех ламп в зависимости от кода, сформированного на счетчике "TINA" </ul></li>
 <font face="comic sans ms" size=+4 color=red><hr color=red>Как это сделать? <br></font>Для решения этой задачи мы имеем компьютерную модель "TINA", где и будем собирать простейший дешифратор.
 Затем, подавая тактовые импульсы на вход счетчика, мы будем смотреть, какая именно лампа загорелась и составлять таблицу состояний этого дешифратора.
 Задача будет считаться <i><font color=red>решенной верно</font></i>, если теоретическая таблица состояний дешифратора совпадет с таблицей состояний, составленной нами в "TINA".
@@ -186,9 +185,7 @@ function vv8()
 
 <hr color=red><hr color=red>
 <font face="comic sans ms" size=+4 color=blue><b> 
-<p align=left>
 Задача №4
-<br>
 </font>
 <font face="comic sans ms" size=+3 color=darkblue> <br>
 На компьютерной модели "TINA" собрать схему простейшего мультиплексора и представить последовательность действий, демонстрирующих работу этого устройства в виде передачи напряжения от каждого
@@ -199,25 +196,22 @@ function vv8()
 <font face="comic sans ms" size=+4 color=red>
 <hr color=red>
 Что дано? <br></font>
-<p align=left>
    <ul>
    <font face="comic sans ms" size=+3 color=darkblue>
-     <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
-     <li><p align=left>Дана проверенная на "TINA" схема простейшего 4-разрядного суммирующего счетчика и известен принцип работы этого счетчика </li> 
-	 <li><p align=left>Дана схема простейшего дешифратора и известен принцип работы этого устройства </li>
-	 	 <li><p align=left>Дана схема <a href="javascript: vv3()" > 
+   <li>Дана программа компьютерного моделирования электронных схем "TINA"</li>
+   <li>Дана проверенная на "TINA" схема простейшего 4-разрядного суммирующего счетчика и известен принцип работы этого счетчика </li> 
+<li>Дана схема простейшего дешифратора и известен принцип работы этого устройства </li>
+<li>Дана схема <a href="javascript: vv3()" > 
 аналогового мультиплексора</a> и известен принцип работы этого устройства </li>
-
-  
 <hr size=+2 color=red>
 
 <font face="comic sans ms" size=+4 color=red>
-Что надо найти? <br></font>Надо показать:<ul><li><p align=left> как передать определенное напряжение от каждого из источников в зависимости от кода, сформированного на счетчике "TINA" </ul></li>
+Что надо найти? <br></font>Надо показать:<ul><li> как передать определенное напряжение от каждого из источников в зависимости от кода, сформированного на счетчике "TINA" </ul></li>
 <font face="comic sans ms" size=+4 color=red><hr color=red>Как это сделать? <br></font>Для решения этой задачи мы имеем компьютерную модель "TINA", где и будем собирать аналоговый мультиплексор.
 Затем, подавая тактовые импульсы на вход счетчика, мы будем смотреть, какое напряжение передано на вход АЦП.
 Задача будет считаться <i><font color=red>решенной верно</font></i>, если на выходе АЦП напряжение будет равняться напряжению входного сигнала с тем номером, двоичный код которого был
 сформирован счетчиком.
-
+</p>
 <br>
 <hr color=red>
 
